# agentmsg

./: .env.example  .gitignore  AI-Agent-Communication-Middleware-Product-Roadmap.md  AI-Agent-Communication-Middleware-Technical.md  AI-Agent-Communication-Middleware.md  CHANGELOG.md  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
cmd/api-gateway/: main.go
cmd/message-engine/: main.go
cmd/migrate/: main.go
deployments/docker/: Dockerfile.api-gateway  Dockerfile.message-engine  docker-compose.yml  prometheus.yml
deployments/k8s/: api-gateway.yaml  ingress.yaml  message-engine.yaml  namespace.yaml
docs/: api.md  architecture.md  operations.md  websocket.md
docs/sdk/: python.md
internal/api/: e2e_integration_test.go  handler.go  handler_batch.go  handler_test.go  openapi.yaml  openapi_spec.go  openapi_test.go  responses.go
internal/config/: config.go  config_test.go
internal/engine/: engine.go  engine_test.go  exactly_once.go  integration_test.go
internal/middleware/: middleware.go
internal/model/: agent.go  agent_test.go  audit.go  billing.go  message.go  message_test.go  (+1 more)
scripts/: build-python-sdk.sh  build-release-artifacts.sh  bump-version.sh  check-release-artifacts.sh  check-version-tooling.sh  generate-release-notes.py  generate-release-notes.sh  render-k8s-manifests.sh  run-dev.sh  smoke.sh  update-changelog.sh  verify.sh
sdk/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/agentmsg/: __init__.py  examples.py
sdk/python/tests/: test_client.py
(+45 files in other folders)
